--- a/Assets/UIDocuments/Templates/SubState/SubStateCause.uxml
+++ b/Assets/UIDocuments/Templates/SubState/SubStateCause.uxml
@@ -1,5 +1,5 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:TextField data-source-type="NavalCombatCore.SubState, Assembly-CSharp" readonly="true">
+    <ui:TextField data-source-type="NavalCombatCore.SubState, Assembly-CSharp" readonly="true" multiline="true" style="white-space: normal;">
         <Bindings>
             <ui:DataBinding property="value" data-source-path="cause" binding-mode="ToTarget" />
         </Bindings>
