Implement more DEs, add shipLog's log, add reverse movement and fix bugs

--- a/Assets/UIDocuments/InformationPanel.uxml
+++ b/Assets/UIDocuments/InformationPanel.uxml
@@ -33,6 +33,7 @@
                 <Bindings>
                     <ui:DataBinding property="value" data-source-path="desiredSpeedKnots" binding-mode="TwoWay" />
                     <ui:DataBinding property="highValue" data-source-path="maxSpeedKnotsProp" binding-mode="ToTarget" />
+                    <ui:DataBinding property="lowValue" data-source-path="minSpeedKnotsProp" binding-mode="ToTarget" />
                 </Bindings>
             </ui:Slider>
             <ui:VisualElement style="flex-grow: 0; flex-direction: row;">
