--- a/Assets/UIDocuments/ScenarioStateEditor.uxml
+++ b/Assets/UIDocuments/ScenarioStateEditor.uxml
@@ -58,13 +58,36 @@
                             <ui:DataBinding property="value" data-source-path="hasMoonlight" binding-mode="TwoWay" />
                         </Bindings>
                     </ui:Toggle>
-                </ui:VisualElement>
-                <ui:VisualElement style="flex-grow: 1; flex-basis: 50px;">
                     <ui:IntegerField label="Sea State (Beaufort)">
                         <Bindings>
                             <ui:DataBinding property="value" data-source-path="seaStateBeaufort" binding-mode="TwoWay" />
                         </Bindings>
                     </ui:IntegerField>
+                </ui:VisualElement>
+                <ui:VisualElement style="flex-grow: 1; flex-basis: 50px;">
+                    <ui:VisualElement data-source-path="weaponSimulationAssignmentClock" style="flex-grow: 1; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);">
+                        <ui:Label text="Weapon Target Assignment Clock" />
+                        <ui:FloatField label="Interval Seconds">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="intervalSeconds" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:FloatField>
+                        <ui:FloatField label="Accumulate Second">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="accumulateSecond" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:FloatField>
+                        <ui:FloatField label="Elapsed Seconds">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="elapsedSeconds" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:FloatField>
+                    </ui:VisualElement>
+                    <ui:Toggle label="Doing Step">
+                        <Bindings>
+                            <ui:DataBinding property="value" data-source-path="doingStep" binding-mode="TwoWay" />
+                        </Bindings>
+                    </ui:Toggle>
                 </ui:VisualElement>
             </ui:VisualElement>
             <ui:Label text="Description" />
