--- a/Assets/UIDocuments/NavalCombat/ShipClassEditor.uxml
+++ b/Assets/UIDocuments/NavalCombat/ShipClassEditor.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:Template name="GlobalStringEditor" src="project://database/Assets/UIDocuments/GlobalStringEditor.uxml?fileID=9197481963319205126&amp;guid=bbf36dc1793baa44a987432580e3d674&amp;type=3#GlobalStringEditor" />
-    <ui:Template name="ArmorRatingEditor" src="project://database/Assets/UIDocuments/ArmorRatingEditor.uxml?fileID=9197481963319205126&amp;guid=37ee59f7e2be1ae42a09a6e60180ee72&amp;type=3#ArmorRatingEditor" />
+    <ui:Template name="GlobalStringEditor" src="project://database/Assets/UIDocuments/Common/GlobalStringEditor.uxml?fileID=9197481963319205126&amp;guid=bbf36dc1793baa44a987432580e3d674&amp;type=3#GlobalStringEditor" />
+    <ui:Template name="ArmorRatingEditor" src="project://database/Assets/UIDocuments/NavalCombat/ArmorRatingEditor.uxml?fileID=9197481963319205126&amp;guid=37ee59f7e2be1ae42a09a6e60180ee72&amp;type=3#ArmorRatingEditor" />
     <Style src="project://database/Assets/UIDocuments/styles/style.uss?fileID=7433441132597879392&amp;guid=2bc9a89e260078e449dd456da4bfcf64&amp;type=3#style" />
     <ui:VisualElement data-source-type="GameManager, Assembly-CSharp" class="panel">
         <ui:Label text="Class Editor" class="title" />
@@ -35,7 +35,7 @@
                                         </Bindings>
                                     </ui:EnumField>
                                     <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
-                                        <ui:EnumField label="Country" value="Center" type="NavalCombatCore.Country, Assembly-CSharp" style="flex-grow: 1;">
+                                        <ui:EnumField label="Country" value="Center" type="CoreUtils.Country, Assembly-CSharp" style="flex-grow: 1;">
                                             <Bindings>
                                                 <ui:DataBinding property="value" data-source-path="country" binding-mode="TwoWay" />
                                             </Bindings>
@@ -108,13 +108,13 @@
                                 <ui:Button text="Export Selected" name="ExportSelectedBatteryButton" />
                             </ui:VisualElement>
                             <ui:ScrollView style="height: 100%; flex-grow: 1;">
-                                <ui:ListView item-template="project://database/Assets/UIDocuments/BatteryRecordEditor.uxml?fileID=9197481963319205126&amp;guid=e85d42eaff3911a4d850ecd233a8d27c&amp;type=3#BatteryRecordEditor" binding-source-selection-mode="AutoAssign" show-add-remove-footer="true" virtualization-method="DynamicHeight" name="BatteryRecordsListView" data-source-path="batteryRecords" style="flex-grow: 0;" />
+                                <ui:ListView item-template="project://database/Assets/UIDocuments/NavalCombat/BatteryRecordEditor.uxml?fileID=9197481963319205126&amp;guid=e85d42eaff3911a4d850ecd233a8d27c&amp;type=3#BatteryRecordEditor" binding-source-selection-mode="AutoAssign" show-add-remove-footer="true" virtualization-method="DynamicHeight" name="BatteryRecordsListView" data-source-path="batteryRecords" style="flex-grow: 0;" />
                             </ui:ScrollView>
                         </ui:Tab>
                         <ui:Tab label="Rapid Fire Battery">
                             <ui:VisualElement style="flex-grow: 1;">
                                 <ui:ScrollView>
-                                    <ui:ListView data-source-path="rapidFireBatteryRecords" binding-source-selection-mode="AutoAssign" item-template="project://database/Assets/UIDocuments/RapidFireBatteryRecordEditor.uxml?fileID=9197481963319205126&amp;guid=c54c25b0a3728a647b6d6db069dbe92f&amp;type=3#RapidFireBatteryRecordEditor" virtualization-method="DynamicHeight" name="RapidFireBatteryListView" show-add-remove-footer="true" />
+                                    <ui:ListView data-source-path="rapidFireBatteryRecords" binding-source-selection-mode="AutoAssign" item-template="project://database/Assets/UIDocuments/NavalCombat/RapidFireBatteryRecordEditor.uxml?fileID=9197481963319205126&amp;guid=c54c25b0a3728a647b6d6db069dbe92f&amp;type=3#RapidFireBatteryRecordEditor" virtualization-method="DynamicHeight" name="RapidFireBatteryListView" show-add-remove-footer="true" />
                                 </ui:ScrollView>
                             </ui:VisualElement>
                         </ui:Tab>
@@ -156,7 +156,7 @@
                                             </ui:MultiColumnListView>
                                         </ui:VisualElement>
                                     </ui:VisualElement>
-                                    <ui:ListView data-source-path="mountLocationRecords" name="TorpedoMountsListView" binding-source-selection-mode="AutoAssign" item-template="project://database/Assets/UIDocuments/MountLocationRecordEditor.uxml?fileID=9197481963319205126&amp;guid=83e697c363f8eb349b6713defb6ef393&amp;type=3#MountLocationRecordEditor" header-title="Mounts" show-foldout-header="true" show-add-remove-footer="true" virtualization-method="DynamicHeight" />
+                                    <ui:ListView data-source-path="mountLocationRecords" name="TorpedoMountsListView" binding-source-selection-mode="AutoAssign" item-template="project://database/Assets/UIDocuments/NavalCombat/MountLocationRecordEditor.uxml?fileID=9197481963319205126&amp;guid=83e697c363f8eb349b6713defb6ef393&amp;type=3#MountLocationRecordEditor" header-title="Mounts" show-foldout-header="true" show-add-remove-footer="true" virtualization-method="DynamicHeight" />
                                 </ui:VisualElement>
                             </ui:ScrollView>
                         </ui:Tab>
